Fix whitespace

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -109,6 +109,11 @@ body {
     padding: 0;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 h2 {
     margin: 0;
 }
